CLO-132 ✅ test : 공지사항 레포지토리 키워드 검색 테스트(제목, 내용, both)) 최신 3개 글 조회 테스트 추가